feat: analyze and commit changes

--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
- EXPO_PUBLIC_FIREBASE_API_KEY="AIzaSyDxeK6PeJHWTVP9ALDhDfahCXzhBtPhv5o"
- EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN="student-id-2714b.firebaseapp.com"
- EXPO_PUBLIC_FIREBASE_PROJECT_ID="student-id-2714b"
- EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET="student-id-2714b.firebasestorage.app"
- EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="216503874866"
- EXPO_PUBLIC_FIREBASE_APP_ID="1:216503874866:web:b12da68689a432783ed32b"
- EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID="G-Y6MRXSYKQG"
+EXPO_PUBLIC_FIREBASE_API_KEY="AIzaSyAEt9BeEIp5gaG7AYfMZNiDwYASoE2_dig"
+EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN="sstudent-id-39370.firebaseapp.com"
+EXPO_PUBLIC_FIREBASE_PROJECT_ID="student-id-39370"
+EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET="student-id-39370.firebasestorage.app"
+EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="156662559198"
+EXPO_PUBLIC_FIREBASE_APP_ID="1:156662559198:web:6472b28250c2d8c3bcad4f"
+EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID="G-C9GD3RXLC7"
+
+# Cloudinary Configuration
+EXPO_PUBLIC_CLOUDINARY_CLOUD_NAME=dvizxkcaf
+EXPO_PUBLIC_CLOUDINARY_API_KEY="847144128942893"
+EXPO_PUBLIC_CLOUDINARY_API_SECRET="yEHzYEUgFAXFuY-UwpKDh5ReDCM"
+EXPO_PUBLIC_CLOUDINARY_UPLOAD_PRESET=your-upload-preset
+EXPO_PUBLIC_CLOUDINARY_URL=https://api.cloudinary.com/v1_1/dvizxkcaf/image/upload
+EXPO_PUBLIC_CLOUDINARY_URL="cloudinary://847144128942893:yEHzYEUgFAXFuY-UwpKDh5ReDCM@dvizxkcaf"
